# minesweeper-yew

./: .gitignore  Cargo.toml  README.md
src/: main.rs
static/: index.html  styles.css
